begin blogpost functionality

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,8 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Guestbook/src/main/webapp/WEB-INF/lib/guava-16.0.1.jar"/>
+	<classpathentry kind="lib" path="/Guestbook/src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="/Guestbook/src/main/webapp/WEB-INF/lib/objectify-5.0.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
